# pytest_course

./: README.md
basics/: .coverage  pyproject.toml
basics/basics/: operations.py
basics/tests/: test_operations.py
titanic_pro/: README.md  infer.py  pyproject.toml  train.py
titanic_pro/data/: split_titanic.py  test.csv  train.csv
titanic_pro/tests/: test_model.py  test_pipeline.py  test_utils.py
titanic_pro/titanic_pro/: config.py  custom_transformers.py  model.py  pipeline.py  train_utils.py  utils.py
weather/: .coverage  pyproject.toml
weather/tests/: test_weather.py
weather/weather/: weather.py
