[tool.poetry]
name = "titanic-pro"
version = "0.1.0"
description = ""
authors = ["Pasquinell <purbanir@gmail.com>"]
readme = "README.md"
packages = [{include = "titanic_pro"}]

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.0.1"
pandas = "^1.3.3"
xgboost = "^1.5.0"
numpy = "^1.21.2"
joblib = "^1.1.0"
optuna = "^2.10.0"
notebook = "^6.5.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
